Finish the skills & the education section & the work ex

--- a/public/index.html
+++ b/public/index.html
@@ -12,19 +12,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Your Name | Full-Stack Web Developer</title>
+    <title>George Essam | Full-Stack Web Developer</title>
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yourwebsite.com/">
-    <meta property="og:title" content="Your Name | Full-Stack Web Developer">
+    <meta property="og:title" content="George Essam | Full-Stack Web Developer">
     <meta property="og:description" content="Full-Stack Web Developer specializing in JavaScript, .NET Core, and SQL Server. View my portfolio, projects, and professional experience.">
     <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yourwebsite.com/">
-    <meta property="twitter:title" content="Your Name | Full-Stack Web Developer">
+    <meta property="twitter:title" content="George Essam | Full-Stack Web Developer">
     <meta property="twitter:description" content="Full-Stack Web Developer specializing in JavaScript, .NET Core, and SQL Server. View my portfolio, projects, and professional experience.">
     <meta property="twitter:image" content="%PUBLIC_URL%/og-image.jpg">
   </head>
